# CoAssisted-Workspace

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GCP_SETUP.md  HANDOFF.md  HANDOFF_LOG.md  HANDOFF_STATE.json  INSTALL.md  LICENSE  MCPB.md  Makefile  README.md  _version.py  access_audit.py  ap-receipt-sweep-2026-05-01.md  ap-receipt-sweep_run-report_2026-05-01.md  ap-receipt-sweep_run-report_2026-05-01_v2.md  ap-sweep-status_2026-05-01.md  ap_drive_layout.py  ap_sweep.py  ap_tree.py  ar_invoicing.py  ar_send.py  auth.py  authenticate.py  awaiting_info.json  baseline.py  brand-voice.md  brand_voice.py  briefing_actions.json  briefing_actions.py  briefing_dispatcher.py  briefing_webhook.py  check_api_key.py  config.example.json  config.py  contract_bundle.py  cost_center_map.py  crm_events.py  crm_stats.py  (+78 more)
.claude-plugin/: marketplace.json  plugin.json
CoAssisted-Workspace/coassisted-workspace-public/: .gitignore  CONTRIBUTING.md  RELEASE_INSTRUCTIONS.md  ap_drive_layout.py  brand-voice.example.md  junk_filter.py  merchant_cache.py  project_invoices.py  project_registry.py  recent_actions.py  refresh_stats.py  telemetry.py  tier.py  vendor_followups.py
CoAssisted-Workspace/coassisted-workspace-public/.claude-plugin/: plugin.json
CoAssisted-Workspace/coassisted-workspace-public/.github/workflows/: test.yml
CoAssisted-Workspace/coassisted-workspace-public/README/: GoogleWorkspaceMCP_UserManual_2026-04-24.docx
CoAssisted-Workspace/coassisted-workspace-public/docs/: COMPLETE_GUIDE.docx  COMPLETE_GUIDE.md
CoAssisted-Workspace/coassisted-workspace-public/templates/: outbound_re_engage.md
CoAssisted-Workspace/coassisted-workspace-public/tests/: test_auth_scopes.py  test_new_workflows.py  test_project_registry.py  test_receipts_chat.py  test_rules.py  test_seed_response_templates.py  test_telemetry.py
CoAssisted-Workspace/coassisted-workspace-public/tools/: project_invoices.py  workflows.py
README/: README_GoogleWorkspaceMCP_UserManual_2026-04-24.md
coassisted-workspace-public/: GCP_SETUP.md  LICENSE  SECURITY.md  auth.py  config.py  dryrun.py  errors.py  gservices.py  merchants.example.json  receipts.py  rules.py  setup_wizard.py
coassisted-workspace-public/README/: README_GoogleWorkspaceMCP_UserManual_2026-04-24.md
coassisted-workspace-public/docs/: USER_MANUAL.md
coassisted-workspace-public/templates/: outbound_cold_outreach.md  outbound_follow_up_after_meeting.md  outbound_nps_checkin.md
coassisted-workspace-public/tests/: test_ap_drive_layout.py  test_llm.py  test_receipts.py  test_receipts_enrichment.py  test_recent_actions.py  test_tier.py  test_workflows_maps.py
coassisted-workspace-public/tools/: docs.py  gmail.py  sheets.py  system.py
docs/: COMPLETE_GUIDE.md  USER_MANUAL.docx  USER_MANUAL.md
scripts/: build_april_master.py  build_project_dashboards.py  generate_pandadoc_tools.py  push_april_master_to_sheet.py  refresh_staffwizard_master.py  seed_response_templates.py  smoke_access_audit.py  smoke_contract_bundle.py  smoke_executive_briefing.py  smoke_messaging.py  smoke_morning_brief.py  smoke_p2_infra.py  smoke_p2_workflows.py  smoke_p3.py  smoke_p4.py  smoke_p5.py  smoke_p6_p7.py  smoke_reply_all_guard.py  smoke_scanner_p1.py  smoke_schedule_defrag.py  test_receipts_live.py  train_gl_memo_classifier.py
scripts/cron/: crontab_template.txt  install_crontab.py  install_crontab.sh
templates/: outbound_partner_intro.md  outbound_renewal_reminder.md  outbound_scheduling.md  outbound_thanks_for_meeting.md
tests/: conftest.py  test_access_audit.py  test_ap_drive_layout.py  test_ap_sweep.py  test_ap_tree.py  test_ar_collections_gate.py  test_ar_invoicing.py  test_ar_send_renderers.py  test_auth_scopes.py  test_brand_voice.py  test_brand_voice_filter.py  test_calendar_tools.py  test_chat_tools.py  test_contacts_flatten.py  test_contacts_tools.py  test_contract_bundle.py  test_crm_events.py  test_crm_stats.py  test_dm_email_cache.py  test_docs_tools.py  test_draft_queue.py  test_drive_tools.py  test_dryrun.py  test_enrichment_tools.py  test_errors.py  test_executive_briefing.py  test_external_feeds.py  test_gl_classifier.py  test_gl_classifier_llm.py  test_gl_memo_classifier.py  test_gl_merchant_map.py  test_gmail_tools.py  test_handoff_tools.py  test_health_checks.py  test_junk_filter.py  test_labor_ingest.py  test_latest_reply_ts.py  test_llm.py  test_maps_tools.py  test_master_rollup.py  (+50 more)
tools/: __init__.py  _workflow_helpers.py  access_audit.py  ap_journal.py  ap_tree.py  ap_wave1.py  ap_wave2.py  ap_wave3.py  calendar.py  chat.py  contacts.py  contract_bundle.py  cron_manager.py  draft_queue.py  drive.py  enrichment.py  executive_briefing.py  gmail.py  handoff.py  maps.py  morning_brief.py  p2_workflows.py  p3_workflows.py  p4_workflows.py  p5_workflows.py  p6_workflows.py  p7_workflows.py  pandadoc_content.py  pandadoc_documents.py  pandadoc_misc.py  pandadoc_templates.py  pandadoc_webhooks.py  pandadoc_workflows.py  pandadoc_workspace.py  project_invoices.py  receipts.py  reply_all_guard.py  scanner.py  schedule_defrag.py  staffwizard.py  (+8 more)
