[project]
name = "coassisted-workspace"
version = "0.7.0-dev"
# IMPORTANT: keep this in sync with _version.py — that's the single source of
# truth for runtime, and pyproject.toml has to be hand-synced because pip
# install reads it before _version.py is importable. Use `make bump VERSION=X.Y.Z`
# to update both atomically.
description = "Local MCP server: Gmail, Calendar, Drive, Sheets, Docs, Tasks, Contacts (CRM), Chat, plus AP automation (invoices, receipts, vendor follow-up loop) — 183 tools for Claude Cowork."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Finnn"}]
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.6",
    "google-auth>=2.29",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "google-api-python-client>=2.120",
    "googlemaps>=4.10",
    # Pillow shrinks oversized phone-photo receipts before Claude Vision.
    # Anthropic API caps images at 5MB; phones routinely produce 6–18MB.
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# Install with: pip install -e ".[llm]"
# Required for: refresh_brand_voice.py, pipeline_digest.py, the optional
# LLM-backed signature parser, and the system_check_anthropic_key tool.
llm = [
    "anthropic>=0.40",
]

[project.scripts]
# Console-script entry points. Keep both old + new names so anyone with
# `coassisted-workspace` muscle memory works AND any cron job that already
# calls `google-workspace-mcp-refresh` keeps working without surprise.
coassisted-workspace = "server:main"
coassisted-workspace-refresh = "refresh_stats:main"
google-workspace-mcp = "server:main"
google-workspace-mcp-refresh = "refresh_stats:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Top-level single-file modules (anything outside tools/).
py-modules = [
    "server",
    "auth",
    "errors",
    "config",
    "gservices",
    "logging_util",
    "retry",
    "dryrun",
    "rendering",
    "templates",
    "rules",
    "crm_stats",
    "refresh_stats",
    "enrich_inbox",
    "junk_filter",
    "llm",
    "refresh_brand_voice",
]
packages = ["tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
