[project]
name = "coassisted-workspace"
version = "0.8.5"
# IMPORTANT: keep this in sync with _version.py — that's the single source of
# truth for runtime, and pyproject.toml has to be hand-synced because pip
# install reads it before _version.py is importable. Use `make bump VERSION=X.Y.Z`
# to update both atomically.
description = "Local MCP server: Gmail, Calendar, Drive, Sheets, Docs, Tasks, Contacts (CRM), Chat, plus AP/AR automation (invoices, receipts, vendor follow-up loop, customer collections cadence, Workday EIB, baseline-deviation alerts), full PandaDoc API coverage (122 raw endpoints + 5 quote workflows for Wave 4 e-signatures), and StaffWizard daily-operations pipeline (ingest, master Sheets, HTML/JSON dashboards) — 396 tools for Claude Cowork."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Finnn"}]
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.6",
    "google-auth>=2.29",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "google-api-python-client>=2.120",
    "googlemaps>=4.10",
    # Pillow shrinks oversized phone-photo receipts before Claude Vision.
    # Anthropic API caps images at 5MB; phones routinely produce 6–18MB.
    "Pillow>=10.0",
    # AP/AR Wave 1-3 modules (labor_ingest, master_rollup,
    # workday_journal_eib, ar_send) all read/write .xlsx — Finnn 2026-05-01
    # Part G1: caused 17/19 v0.8.x test failures on a clean upgrade until
    # manually pip-installed.
    "openpyxl>=3.1",
    # croniter — Finnn 2026-05-01 Part A: install_crontab.py + Part B
    # system_check_cron compute next-fire timestamps. Soft dep; both
    # surfaces degrade gracefully when missing, but the timing-aware
    # installer is materially better with it.
    "croniter>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.4",
    "mypy>=1.20",
]
# Install with: pip install -e ".[llm]"
# Required for: refresh_brand_voice.py, pipeline_digest.py, the optional
# LLM-backed signature parser, and the system_check_anthropic_key tool.
llm = [
    "anthropic>=0.40",
]

[project.scripts]
# Console-script entry points. Keep both old + new names so anyone with
# `coassisted-workspace` muscle memory works AND any cron job that already
# calls `google-workspace-mcp-refresh` keeps working without surprise.
coassisted-workspace = "server:main"
coassisted-workspace-refresh = "refresh_stats:main"
google-workspace-mcp = "server:main"
google-workspace-mcp-refresh = "refresh_stats:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Top-level single-file modules (anything outside tools/).
py-modules = [
    "server",
    "auth",
    "errors",
    "config",
    "gservices",
    "logging_util",
    "retry",
    "dryrun",
    "rendering",
    "templates",
    "rules",
    "crm_stats",
    "refresh_stats",
    "enrich_inbox",
    "junk_filter",
    "llm",
    "refresh_brand_voice",
]
packages = ["tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Default suite excludes 'network' tests (live Google/Maps/Anthropic APIs).
# Run network tests explicitly with: make test-network OR pytest -m network
addopts = "-m 'not network'"
markers = [
    "network: tests that require live network access to Google/Maps/Anthropic APIs",
]

[tool.mypy]
# P2-2 baseline. Soft config — don't try to type-check every line of
# code that was written before mypy existed. Goal: catch obvious bugs
# in NEW code without drowning in legacy noise.
python_version = "3.10"
ignore_missing_imports = true        # Google API client + others lack stubs
check_untyped_defs = false           # don't enforce on untyped functions
warn_unused_ignores = true           # catch stale `# type: ignore`
no_implicit_optional = true
warn_redundant_casts = true
exclude = [
    "^\\.venv/",
    "^build/",
    "^dist/",
    "^.+\\.egg-info/",
    "^logs/",
    "^pytest-cache-files-",
    "^scripts/",                      # smoke scripts, often partial
    ".+\\.bak\\.",                # backup files
]

# Strict-mode opt-in for modules with 0 baseline errors. Adding new
# modules here is a one-line change; expand the list as files get cleaned up.
[[tool.mypy.overrides]]
module = [
    "review_queue",
    "vendor_response_history",
]
strict = true
# `ignore_missing_imports` from the parent [tool.mypy] still applies.
ignore_missing_imports = true

